# bonus-tracker

./: .env.example  .gitignore  CLAUDE.md  Clockify_Time_Report_Detailed_01_02_2026-28_02_2026.csv  Clockify_Time_Report_Summary_01_02_2026-28_02_2026.csv  Pre-Sales_Bonus_Tracker.xlsx  README.md  docker-compose.prod.yml  docker-compose.yml  todo.md
.github/workflows/: docker-build.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: exports.py  imports.py  projects.py  reports.py  time_entries.py
backend/app/services/: bonus_calculator.py  csv_parser.py  data_sources.py  hours_service.py  pdf_generator.py
backend/tests/: conftest.py  test_api.py  test_bonus_calculator.py  test_csv_parser.py  test_reports.py
frontend/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: DataTable.tsx  Layout.tsx  PageState.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: BonusOverview.tsx  CustomerReport.tsx  Dashboard.tsx  Employees.tsx  FinanceReport.tsx  Import.tsx  ProjectComparison.tsx  ProjectDetail.tsx  Projects.tsx  Revenue.tsx  TimeEntries.tsx
frontend/src/types/: index.ts
