[project]
name = "bonus-tracker-backend"
version = "0.1.0"
description = "Pre-Sales Bonus Tracker API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.21.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "weasyprint>=63.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# Allow Depends() and Query() in function defaults — standard FastAPI pattern
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "Depends", "Query"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
